@@ -1,6 +1,7 @@
 #pragma once
 
 #include "buildingplan.h"
+#include "defaultitemfilters.h"
 #include "itemfilter.h"
 
 #include "Core.h"
@@ -21,7 +22,9 @@ public:
 
     const std::vector<ItemFilter> item_filters;
 
-    PlannedBuilding(DFHack::color_ostream &out, df::building *bld, HeatSafety heat, const std::vector<ItemFilter> &item_filters);
+    const std::set<std::string> specials;
+
+    PlannedBuilding(DFHack::color_ostream &out, df::building *bld, HeatSafety heat, const DefaultItemFilters &item_filters);
     PlannedBuilding(DFHack::color_ostream &out, DFHack::PersistentDataItem &bld_config);
 
     void remove(DFHack::color_ostream &out);
