@@ -36,12 +36,13 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## New Plugins
 
 ## Fixes
--@ `buildingplan`: remember choice per building type for whether the player wants to choose specific items
 -@ `buildingplan`: items are now attached correctly to screw pumps and other multi-item buildings
--@ `buildingplan`: you can now attach multiple weapons to spike traps
 
 ## Misc Improvements
 -@ `buildingplan`: can now filter by clay materials
+-@ `buildingplan`: remember choice per building type for whether the player wants to choose specific items
+-@ `buildingplan`: you can now attach multiple weapons to spike traps
+-@ `buildingplan`: can now filter by whether a slab is engraved
 - `blueprint`: now writes blueprints to the ``dfhack-config/blueprints`` directory
 - `blueprint-library-guide`: library blueprints have moved from ``blueprints`` to ``hack/data/blueprints``
 - player-created blueprints should now go in the ``dfhack-config/blueprints`` folder. please move your existing blueprints from ``blueprints`` to ``dfhack-config/blueprints``. you don't need to move the library blueprints -- those can be safely deleted from the old ``blueprints`` directory.
